apps/external/workout/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: workout
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.18
  ports:
    - name: http
      port: 8080
      targetPort: 8080
