apps/external/workout/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: workout
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`workout.joejad.com`)
      kind: Rule
      services:
        - name: workout
          port: 5000
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
